# ece422-a2

./: .env  .gitignore  Cargo.toml  docker-compose.yml
client/: Cargo.toml
client/src/: main.rs
db/: schema.sql
model/: Cargo.toml
model/src/: cmd.rs  lib.rs  model.rs
server/: Cargo.toml
server/src/: main.rs
server/src/dao/: dao.rs
