[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.21"
postgres = "0.19.7"
tokio = { version = "1.36.0", features = ["full"] }
tungstenite = {version="0.21.0"}
url = "2.5.0"
x25519-dalek = "2.0.1"
rand = "*"
