[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.21"
postgres = "0.19.7"
rand_core = "0.6.4"
tokio = { version = "1.36.0", features = ["full"] }
tungstenite = {version="0.21.0"}
model = { path = "../model" }
url = "2.5.0"
x25519-dalek = {version = "2.0.1", features=["serde"]}
rand = "*"
serde = {version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

