[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.21"
model = { path = "../model" }
postgres = "0.19.7"
rand_core = "0.6.4"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
x25519-dalek = { version="2", features = ["zeroize", "serde"]}
